code/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-reposition-it-api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure-dns
spec:
  rules:
  - host: dev.reposition.it
    http:
      paths:
      - backend:
          serviceName: ing-reposition-it-api
          servicePort: 80
        path: /
  tls:
  - hosts:
    - dev.reposition.it
    secretName: reposition.it
